--- a/1-exercises/A-reading-list/style.css
+++ b/1-exercises/A-reading-list/style.css
@@ -12,144 +12,49 @@ body {
     "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
-.site-footer {
-  margin-top: 4em;
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f0f0f0;
 }
 
-.site-footer p {
-  border-top: 1px solid #dccdc6;
-  padding-top: 2em;
-  padding-bottom: 2em;
+#content {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-.navbar-brand > img {
-  max-height: 40px;
-  width: auto;
+ul {
+  list-style: none;
+  padding: 0;
 }
 
-.navbar-light .navbar-nav .nav-link {
-  color: #292b2c;
-  font-weight: 600;
-  text-transform: uppercase;
+li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  margin: 10px 0;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
 
-/* Buttons */
-.btn {
-  border-radius: 0.15em;
-}
-
-/* Alert */
-.alert {
-  position: relative;
-  margin-top: 2em;
-  margin-bottom: 3em;
-  padding-top: 1.5em;
-  padding-bottom: 1.5em;
-  border: 1px solid #dccdc6;
-  border-radius: 0;
-  font-size: 0.85rem;
-  line-height: 1.3em;
-  background: transparent;
-  color: #292b2c;
-}
-
-.alert:before {
-  content: "";
-  position: absolute;
-  left: -1px;
-  top: 0;
-  height: 100%;
-  width: 1px;
-  background: #ce5f31;
-}
-
-/* Jumbotron */
-.jumbotron {
-  border-radius: 0;
-}
-
-/* Headings */
-.heading-underline {
-  position: relative;
-  margin-bottom: 2em;
-  padding-bottom: 0.5em;
-  border-bottom: 1px solid #dccdc6;
-  font-size: 1rem;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-
-.heading-underline:before {
-  content: "";
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  width: 25%;
-  height: 1px;
-  max-width: 100px;
-  background: #ce5f31;
-}
-
-/* Article */
-.article {
-  margin-bottom: 2em;
-}
-
-.article-title {
-  margin-bottom: 0.5em;
-  font-weight: 700;
-}
-
-.article-read-more a {
-  font-size: 0.85em;
-  font-weight: 700;
-  text-decoration: uppercase;
-}
-
-.article-read-more a:hover,
-.article-read-more a:focus {
-  text-decoration: none;
-}
-
-.article-read-more .fa {
-  margin-right: 0.5em;
-  color: #ce5f31;
-}
-
-.article-read-more:last-child {
-  margin-bottom: 0;
-}
-
-.red {
-  background-color: red;
-}
-
-.addArticle {
-  margin-bottom: 10px;
-}
-
-#addArticleBtn {
-  margin-left: 20px;
-  height: 37px;
-}
-
-.colorButton {
-  margin-bottom: 20px;
-  margin-right: 20px;
+img {
   width: 100px;
-  height: 50px;
+  height: auto;
+  margin-left: 10px;
 }
 
-#blueBtn {
-  background: #588fbd;
+li.green {
+  background-color: #c8e6c9;
 }
 
-#orangeBtn {
-  background: #f0ad4e;
-}
-
-#greenBtn {
-  background: #87ca8a;
+li.red {
+  background-color: #ffcdd2;
 }
 
 @media screen and (min-width: 992px) {
