--- a/2-projects/1-todo-list/style.css
+++ b/2-projects/1-todo-list/style.css
@@ -4,9 +4,26 @@ body {
     background-attachment: fixed;
     background-position: center;
     background-size: auto 100%;
-  }
+}
 
-  .container {
+.container {
     margin-top: 150px;
     width: 90%;
-  }
+}
+ul {
+    list-style-type: none;
+}
+ul li {
+    background-color: white;
+    padding: 10px;
+    border: 1px solid #f0f0f0;
+}
+.crossed-text {
+    text-decoration: line-through;
+}
+span.badge {
+    float: right;
+}
+span.badge i {
+    margin-right: 10px;
+}
