Completed all tasks from 1-exercises folder

--- a/1-exercises/A-reading-list/style.css
+++ b/1-exercises/A-reading-list/style.css
@@ -12,6 +12,14 @@ body {
     "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
+.greenLi {
+  background-color: green;
+}
+
+.redLi {
+  background-color: red;
+}
+
 .site-footer {
   margin-top: 4em;
 }
