--- a/2-projects/1-todo-list/style.css
+++ b/2-projects/1-todo-list/style.css
@@ -8,5 +8,57 @@ body {
 
   .container {
     margin-top: 150px;
+    padding: 20px;
     width: 90%;
+  }
+
+  .navbar {
+    background-color: #a6ff00;
+    color: white;
+    padding: 10px;
+    text-align: center;
+  }
+  
+  /* Styles for adding a new task card */
+  .card {
+    margin: 50px;
+  }
+
+  .list-group {
+    padding: 10px;
+    font-size: 1.5rem;
+    list-style: "   ";
+  }
+  
+    .card-header {
+    background-color: #0dcaf0;
+    color: #6f42c1;
+    font-weight: lighter;
+  }
+  
+ #todo-list {
+  background-color: #0dcaf0;
+  color: #6f42c1;
+ }
+
+  .btn-primary {
+    background-color: #20c997;
+    color: #6f42c1;
+    font-weight: lighter;
+    display: flex;
+    align-items: center;
+  }
+  
+  .form-control {
+    border: 2px solid#20c997;
+    border-radius: 5px;
+  }
+  
+  /* Styles to remove all completed tasks */
+  #remove-all-completed {
+    margin-top: 10px;
+  }
+  
+  .list-group li {
+    font-weight: lighter;
   }
